--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@routes": "dist/routes"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "command-line-args": "^5.2.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
